@@ -44,7 +44,7 @@ class TemplateInstallLib(install_lib):
         fp = open(filename, 'w')
         fp.write('# Generated by setup.py do not modify\n')
         fp.write('import os\n')
-        fp.write('prefix = %s\n' % prefix)
+        fp.write('%s\n' % prefix)
         self._write_dictionary(fp, 'resources', resources)
         self._write_dictionary(fp, 'global_resources', global_resources)
         fp.close()
@@ -71,10 +71,10 @@ class TemplateInstallLib(install_lib):
             raise TypeError("%r is missing name" % self)
 
         if 'bdist_wininst' in sys.argv:
-            prefix = 'import sys; prefix = sys.prefix'
+            prefix = 'import sys\nprefix = sys.prefix'
         else:
             install = self.distribution.get_command_obj('install')
-            prefix = '"%s"' % install.prefix
+            prefix = 'prefix = "%s"' % install.prefix
 
         install = self.distribution.get_command_obj('install')
 
